@@ -56,6 +56,8 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
     - Nicer workflow for renaming variables: Now we check for some conditions
       before prompting the user for a name; renamed function
       'lexical_variable_replacement' to 'rename_variable' (ZENOG)
+    - Simplify the code for the Bottom pane a bit (-1 method), no warnings
+      any more (ZENOG)
 
 0.66 2010.07.01
     - Improved the quality and integration of the default window size (ADAMK)
